--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>テスト</title>
+    <title>portfolio</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Londrina+Shadow rel="stylesheet">
@@ -73,6 +73,18 @@
             <div class="clear"></div>
         </div>
         <div class="clear"></div>
+
+        <div id="submit-form" class="modal-wrapper">
+            <div class="modal">
+                <!-- "close-modal"というclassをつけてください -->
+                <div id="close-modal">
+                    <i class="fa fa-2x fa-times"></i>
+                </div>
+                <h2>完了しました！</h2>
+                  
+            </div>
+        </div>
+        
         <div class="contact-form">
             <h1>お問い合わせ</h1>
                 <div class="contact-text">
@@ -82,7 +94,7 @@
                      <textarea></textarea>
                     <p>メッセージ</p>
                     <textarea class="message"></textarea>
-                    <input class="contact-submit" type="submit" value="送信">
+                    <input id="submit-show" class="contact-submit" type="submit" value="送信">
                 </div>
         </div>
         </div>
