--- a/index.html
+++ b/index.html
@@ -86,16 +86,18 @@
         </div>
         
         <div class="contact-form">
+          <form action="https://docs.google.com/forms/d/e/1FAIpQLSebXPfU1ciHFNp6Vgud3sIuj15WpA_qN_aaGHJ3x2SRN5s0zQ/formResponse"  >
             <h1>お問い合わせ</h1>
                 <div class="contact-text">
                     <p>氏名or会社名</p>
-                    <input/>
+                    <input name="entry.1680075270">
                      <p>メールアドレス</p>
-                     <textarea></textarea>
+                     <textarea name="entry.837125651"></textarea>
                     <p>メッセージ</p>
-                    <textarea class="message"></textarea>
+                    <textarea class="message" name="entry.366560792"></textarea>
                     <input id="submit-show" class="contact-submit" type="submit" value="送信">
                 </div>
+            </form>      
         </div>
         </div>
     </div>
