--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         </div>
         <div class="advantage">
             <h1>強み</h1>
-            <div class="ad adone">
+            <div class="ad ad-one">
                 <h2>楽しさを見出す力</h2>
                 <p>やること・やらなければならないこと何でも「楽しい」と思うことができます。嫌い・苦手だと思っていたことでも、些細な楽しみを見出せばそれは私にとって「楽しいこと」になるからです。そのおかげで勉強では苦手な科目はなく、大嫌いな持久走も走り終わった後の爽快感を想像しては自然とにやけてしまい気味悪がられました。</p>
             </div>
-            <div class="ad adtwo">
+            <div class="ad ad-two">
                 <h2>精神的・身体的タフさ</h2>
                 <p>立ち直りが早く、マイナスな感情に関して無駄に引きずることがありません。落ち込むことはよくありますが、長くともその日のうちには自己解決し次の日には前向きな気持ちになれます。さらには、どこでも眠りにつけるので疲れ知らずであり、キャパオーバーになる手前くらいの予定の詰め込みが一番好きです。</p>
             </div>
@@ -76,7 +76,6 @@
 
         <div id="submit-form" class="modal-wrapper">
             <div class="modal">
-                <!-- "close-modal"というclassをつけてください -->
                 <div id="close-modal">
                     <i class="fa fa-2x fa-times"></i>
                 </div>
