--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <h2>宮﨑　瑛理香</h2>
                     <p>京都大学総合人間学部３回生</p>
                     <p>東京出身</p>
-                    <a href="https://twitter.com/erm149221" class="btn twitter">
+                    <a href="https://twitter.com/EPprogramming" class="btn twitter">
                         <span class="fa fa-twitter"></span>
                         twitter
                     </a>
